--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.17.0",
     "@astrojs/mdx": "^0.19.5",
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.3.2",
-    "astro": "^2.5.6",
+    "astro": "^2.6.4",
     "astro-relative-links": "^0.3.4",
-    "sass": "^1.63.3"
+    "sass": "^1.63.3",
+    "sharp": "^0.32.1"
   }
 }
