--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.3.2",
     "astro": "^2.6.4",
+    "astro-icon": "^0.8.1",
     "astro-relative-links": "^0.3.4",
     "sass": "^1.63.3",
     "sharp": "^0.32.1"
